<resources>
    <string name="app_name">The Attic</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">Register</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string name="enter_display_name">Enter Display Name</string>
    <string name="done">Done</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="no_account_sign_up">No Account? Sign up</string>
    <string name="post">Post</string>
    <string name="enter_image_title">Enter Image Title</string>
    <string name="enter_image_description">Enter Image Description</string>
    <string name="set_profile">Set Profile</string>
    <string name="add_post">Add Post</string>
</resources>